# openenv_RL

./: .dockerignore  .gitignore  Dockerfile  README.md  historic_data.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
finance_rl_proj/: README.md  TESTING_GUIDE.md  client.py  historic_data.py  inference.py  openenv.yaml  pyproject.toml  stock_analysis.py
finance_rl_proj/server/: Dockerfile  app.py  finance_rl_proj_environment.py  requirements.txt
server/: Dockerfile  app.py  finance_rl_proj_environment.py  requirements.txt
