# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-finance_rl_proj"
version = "0.1.0"
description = "Finance Rl Proj environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    # install from github
    # "openenv-core[core] @ git+https://github.com/meta-pytorch/OpenEnv.git",
    "openenv-core[core]>=0.2.2",
    # Environment-specific runtime dependencies
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "yfinance",
    "stable-baselines3>=1.8.0",
    "gym>=0.21.0",
    "torch>=2.0.0",
    "matplotlib>=3.5.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.2.0",
    "tensorboard>=2.12.0",
    # Optional: add monitoring/logging clients as needed (Weights & Biases, etc.)
    # "wandb>=0.15.0",
    # HTTP server + API runtime
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.21.0",
    "requests>=2.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0"
]
server = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.21.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m finance_rl_proj.server.app
server = "finance_rl_proj.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["finance_rl_proj", "finance_rl_proj.server"]
package-dir = { "finance_rl_proj" = ".", "finance_rl_proj.server" = "server" }